crates/pg_syntax/tests/snapshots/postgres_regress/date@113.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: SET datestyle TO mdy;
---
VariableSetStmt@0..21
  Set@0..3 "SET"
  Whitespace@3..4 " "
  Ident@4..13 "datestyle"
  Whitespace@13..14 " "
  To@14..16 "TO"
  Whitespace@16..17 " "
  AConst@17..20
    Ident@17..20 "mdy"
  Ascii59@20..21 ";"

